cmake: remove bin and obj directories for new c# project

--- a/projects/test_models/CMakeLists.txt
+++ b/projects/test_models/CMakeLists.txt
@@ -111,6 +111,9 @@ foreach(dia_model ${all_dia_test_models})
         if ("${model_name}" STREQUAL "CSharpModel")
             file(REMOVE_RECURSE "${expected_dir}/CSharpModel/bin")
             file(REMOVE_RECURSE "${expected_dir}/CSharpModel/obj")
+        elseif("${model_name}" STREQUAL "all_path_and_directory_settings")
+            file(REMOVE_RECURSE "${expected_dir}/all_path_and_directory_settings/csharp_kernel/bin")
+            file(REMOVE_RECURSE "${expected_dir}/all_path_and_directory_settings/csharp_kernel/obj")
         endif()
     else()
         if(NOT EXISTS "${expected_dir}")
