quilt.cpp: compile in c++ 98 and remove defaulted functions
- cmake now adds the correct c++ dialect
- do not generate defaulted functions in class header
- test models: remove hash as it is not available in c++ 98.

--- a/projects/test_models/cpp_98/src/CMakeLists.txt
+++ b/projects/test_models/cpp_98/src/CMakeLists.txt
@@ -5,6 +5,7 @@ file(GLOB_RECURSE files RELATIVE
 
 add_library(cpp_98 STATIC ${files})
 set_target_properties(cpp_98 PROPERTIES
+    CXX_STANDARD 98
     OUTPUT_NAME dogen.cpp_98)
 
 install(TARGETS cpp_98 ARCHIVE DESTINATION lib COMPONENT libraries)
