test model sanitizer: add c++ 98 tests

--- a/projects/test_models/test_model_sanitizer/tests/CMakeLists.txt
+++ b/projects/test_models/test_model_sanitizer/tests/CMakeLists.txt
@@ -50,6 +50,7 @@ set_target_properties(${tests_name} PROPERTIES OUTPUT_NAME ${binary_name})
 
 target_link_libraries(${tests_name}
     cpp_model
+    cpp_98
     compressed
     disable_facet_folders
     enable_facet_types
