test models: add lam model

--- a/data/mappings/default.mapping_set.json
+++ b/data/mappings/default.mapping_set.json
@@ -11,7 +11,7 @@
             {
                 "language" : "csharp",
                 "default_name" : {
-                    "simple": "uchar"
+                    "simple": "byte"
                 }
             }
         ]
