--- a/projects/test_models/CMakeLists.txt
+++ b/projects/test_models/CMakeLists.txt
@@ -44,9 +44,9 @@ include_directories(
 #
 if(ODB_FOUND)
     message(STATUS "Adding ODB feature test project")
-    # include_directories(${CMAKE_SOURCE_DIR}/projects/test_models/database/include)
-    # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/database)
-    # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/database/spec)
+    include_directories(${CMAKE_SOURCE_DIR}/projects/test_models/northwind/include)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/northwind)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/northwind/test)
 endif()
 
 # global targets
