--- a/projects/test_models/split_project/some_dir/split_project/src/CMakeLists.txt
+++ b/projects/test_models/split_project/some_dir/split_project/src/CMakeLists.txt
@@ -3,6 +3,12 @@ file(GLOB_RECURSE files RELATIVE
     "${CMAKE_CURRENT_SOURCE_DIR}/"
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 
+set(odb_files "")
+file(GLOB_RECURSE odb_files RELATIVE
+   "${CMAKE_CURRENT_SOURCE_DIR}/"
+   "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx")
+set(files ${files} ${odb_files})
+
 add_library(split_project STATIC ${files})
 set_target_properties(split_project PROPERTIES
     OUTPUT_NAME dogen.split_project)
