--- a/projects/test_models/Zeta/cpp/src/CMakeLists.txt
+++ b/projects/test_models/Zeta/cpp/src/CMakeLists.txt
@@ -3,6 +3,12 @@ file(GLOB_RECURSE files RELATIVE
     "${CMAKE_CURRENT_SOURCE_DIR}/"
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 
+set(odb_files "")
+file(GLOB_RECURSE odb_files RELATIVE
+   "${CMAKE_CURRENT_SOURCE_DIR}/"
+   "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx")
+set(files ${files} ${odb_files})
+
 add_library(Zeta STATIC ${files})
 set_target_properties(Zeta PROPERTIES
     OUTPUT_NAME Zeta)
