--- a/projects/test_models/lam_model/cpp/src/CMakeLists.txt
+++ b/projects/test_models/lam_model/cpp/src/CMakeLists.txt
@@ -22,6 +22,12 @@ file(GLOB_RECURSE files RELATIVE
     "${CMAKE_CURRENT_SOURCE_DIR}/"
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 
+set(odb_files "")
+file(GLOB_RECURSE odb_files RELATIVE
+   "${CMAKE_CURRENT_SOURCE_DIR}/"
+   "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx")
+set(files ${files} ${odb_files})
+
 add_library(lam_model STATIC ${files})
 set_target_properties(lam_model PROPERTIES
     OUTPUT_NAME dogen.lam_model)
