--- a/projects/test_models/two_layers_with_objects/src/CMakeLists.txt
+++ b/projects/test_models/two_layers_with_objects/src/CMakeLists.txt
@@ -22,6 +22,12 @@ file(GLOB_RECURSE files RELATIVE
     "${CMAKE_CURRENT_SOURCE_DIR}/"
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 
+set(odb_files "")
+file(GLOB_RECURSE odb_files RELATIVE
+   "${CMAKE_CURRENT_SOURCE_DIR}/"
+   "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx")
+set(files ${files} ${odb_files})
+
 add_library(two_layers_with_objects STATIC ${files})
 set_target_properties(two_layers_with_objects PROPERTIES
     OUTPUT_NAME dogen.two_layers_with_objects)
