quilt.cpp: more work on odb options file and cmake targets
- move options into odb directory
- assorted fixes to target

--- a/projects/test_models/northwind/src/CMakeLists.txt
+++ b/projects/test_models/northwind/src/CMakeLists.txt
@@ -33,3 +33,165 @@ set_target_properties(northwind PROPERTIES
     OUTPUT_NAME dogen.northwind)
 
 install(TARGETS northwind ARCHIVE DESTINATION lib COMPONENT libraries)
+#
+# ODB Targets
+#
+add_custom_target(odb_northwind)
+
+if (NOT ODB_EXECUTABLE)
+    message(FATAL "ODB Executable not defined.")
+endif()
+
+if (NOT ODB_INCLUDE_DIRS)
+    message(FATAL "ODB include directories not defined.")
+endif()
+
+get_directory_property(dirs INCLUDE_DIRECTORIES)
+set(global_includes "")
+foreach(dir in ${dirs})
+    set(global_includes ${global_includes} -I ${dir})
+endforeach()
+
+add_custom_target(odb_northwind_order_details
+    COMMENT "ODB order_details"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${ODB_EXECUTABLE}
+        --options-file ${CMAKE_CURRENT_SOURCE_DIR}/odb/options.odb
+        --output-dir ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/odb
+        --odb-epilogue '#include "dogen/test_models/northwind/odb/order_details_pragmas.hpp"'
+        --include-regex '%\(.*\).hpp%dogen/test_models/northwind/types/$1.hpp%'
+        --include-regex '%\(^[a-zA-Z0-9_]+\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2'
+        --include-regex '%dogen/test_models/northwind/types/\(.*\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2%'
+        -I ${ODB_INCLUDE_DIRS} ${global_includes}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/types/order_details.hpp
+    VERBATIM
+)
+add_dependencies(odb_northwind odb_northwind_order_details)
+
+add_custom_target(odb_northwind_categories
+    COMMENT "ODB categories"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${ODB_EXECUTABLE}
+        --options-file ${CMAKE_CURRENT_SOURCE_DIR}/odb/options.odb
+        --output-dir ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/odb
+        --odb-epilogue '#include "dogen/test_models/northwind/odb/categories_pragmas.hpp"'
+        --include-regex '%\(.*\).hpp%dogen/test_models/northwind/types/$1.hpp%'
+        --include-regex '%\(^[a-zA-Z0-9_]+\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2'
+        --include-regex '%dogen/test_models/northwind/types/\(.*\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2%'
+        -I ${ODB_INCLUDE_DIRS} ${global_includes}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/types/categories.hpp
+    VERBATIM
+)
+add_dependencies(odb_northwind odb_northwind_categories)
+
+add_custom_target(odb_northwind_suppliers
+    COMMENT "ODB suppliers"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${ODB_EXECUTABLE}
+        --options-file ${CMAKE_CURRENT_SOURCE_DIR}/odb/options.odb
+        --output-dir ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/odb
+        --odb-epilogue '#include "dogen/test_models/northwind/odb/suppliers_pragmas.hpp"'
+        --include-regex '%\(.*\).hpp%dogen/test_models/northwind/types/$1.hpp%'
+        --include-regex '%\(^[a-zA-Z0-9_]+\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2'
+        --include-regex '%dogen/test_models/northwind/types/\(.*\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2%'
+        -I ${ODB_INCLUDE_DIRS} ${global_includes}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/types/suppliers.hpp
+    VERBATIM
+)
+add_dependencies(odb_northwind odb_northwind_suppliers)
+
+add_custom_target(odb_northwind_shippers
+    COMMENT "ODB shippers"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${ODB_EXECUTABLE}
+        --options-file ${CMAKE_CURRENT_SOURCE_DIR}/odb/options.odb
+        --output-dir ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/odb
+        --odb-epilogue '#include "dogen/test_models/northwind/odb/shippers_pragmas.hpp"'
+        --include-regex '%\(.*\).hpp%dogen/test_models/northwind/types/$1.hpp%'
+        --include-regex '%\(^[a-zA-Z0-9_]+\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2'
+        --include-regex '%dogen/test_models/northwind/types/\(.*\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2%'
+        -I ${ODB_INCLUDE_DIRS} ${global_includes}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/types/shippers.hpp
+    VERBATIM
+)
+add_dependencies(odb_northwind odb_northwind_shippers)
+
+add_custom_target(odb_northwind_orders
+    COMMENT "ODB orders"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${ODB_EXECUTABLE}
+        --options-file ${CMAKE_CURRENT_SOURCE_DIR}/odb/options.odb
+        --output-dir ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/odb
+        --odb-epilogue '#include "dogen/test_models/northwind/odb/orders_pragmas.hpp"'
+        --include-regex '%\(.*\).hpp%dogen/test_models/northwind/types/$1.hpp%'
+        --include-regex '%\(^[a-zA-Z0-9_]+\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2'
+        --include-regex '%dogen/test_models/northwind/types/\(.*\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2%'
+        -I ${ODB_INCLUDE_DIRS} ${global_includes}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/types/orders.hpp
+    VERBATIM
+)
+add_dependencies(odb_northwind odb_northwind_orders)
+
+add_custom_target(odb_northwind_products
+    COMMENT "ODB products"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${ODB_EXECUTABLE}
+        --options-file ${CMAKE_CURRENT_SOURCE_DIR}/odb/options.odb
+        --output-dir ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/odb
+        --odb-epilogue '#include "dogen/test_models/northwind/odb/products_pragmas.hpp"'
+        --include-regex '%\(.*\).hpp%dogen/test_models/northwind/types/$1.hpp%'
+        --include-regex '%\(^[a-zA-Z0-9_]+\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2'
+        --include-regex '%dogen/test_models/northwind/types/\(.*\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2%'
+        -I ${ODB_INCLUDE_DIRS} ${global_includes}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/types/products.hpp
+    VERBATIM
+)
+add_dependencies(odb_northwind odb_northwind_products)
+
+add_custom_target(odb_northwind_order_details_key
+    COMMENT "ODB order_details_key"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${ODB_EXECUTABLE}
+        --options-file ${CMAKE_CURRENT_SOURCE_DIR}/odb/options.odb
+        --output-dir ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/odb
+        --odb-epilogue '#include "dogen/test_models/northwind/odb/order_details_key_pragmas.hpp"'
+        --include-regex '%\(.*\).hpp%dogen/test_models/northwind/types/$1.hpp%'
+        --include-regex '%\(^[a-zA-Z0-9_]+\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2'
+        --include-regex '%dogen/test_models/northwind/types/\(.*\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2%'
+        -I ${ODB_INCLUDE_DIRS} ${global_includes}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/types/order_details_key.hpp
+    VERBATIM
+)
+add_dependencies(odb_northwind odb_northwind_order_details_key)
+
+add_custom_target(odb_northwind_customers
+    COMMENT "ODB customers"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${ODB_EXECUTABLE}
+        --options-file ${CMAKE_CURRENT_SOURCE_DIR}/odb/options.odb
+        --output-dir ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/odb
+        --odb-epilogue '#include "dogen/test_models/northwind/odb/customers_pragmas.hpp"'
+        --include-regex '%\(.*\).hpp%dogen/test_models/northwind/types/$1.hpp%'
+        --include-regex '%\(^[a-zA-Z0-9_]+\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2'
+        --include-regex '%dogen/test_models/northwind/types/\(.*\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2%'
+        -I ${ODB_INCLUDE_DIRS} ${global_includes}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/types/customers.hpp
+    VERBATIM
+)
+add_dependencies(odb_northwind odb_northwind_customers)
+
+add_custom_target(odb_northwind_employees
+    COMMENT "ODB employees"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${ODB_EXECUTABLE}
+        --options-file ${CMAKE_CURRENT_SOURCE_DIR}/odb/options.odb
+        --output-dir ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/odb
+        --odb-epilogue '#include "dogen/test_models/northwind/odb/employees_pragmas.hpp"'
+        --include-regex '%\(.*\).hpp%dogen/test_models/northwind/types/$1.hpp%'
+        --include-regex '%\(^[a-zA-Z0-9_]+\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2'
+        --include-regex '%dogen/test_models/northwind/types/\(.*\)-odb\(.*\)%dogen/test_models/northwind/odb/$1-odb$2%'
+        -I ${ODB_INCLUDE_DIRS} ${global_includes}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../include/dogen/test_models/northwind/types/employees.hpp
+    VERBATIM
+)
+add_dependencies(odb_northwind odb_northwind_employees)
